@@ -1,3 +1,5 @@
+* fixed handling of ARG_ARRAY_SUFFIX
+
 0.2.0
 * allow embedded credentials in urls of hosts
 * allow to override default namespace from config and command line
